<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dip"
        android:layout_marginTop="40dip"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/main_user_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dip"
        android:layout_marginStart="10dip"
        android:gravity="center"
        android:hint="@string/username"
        android:inputType="text"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/main_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dip"
        android:layout_marginStart="10dip"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="16sp" />

    <Button
        android:id="@+id/main_button_login"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_margin="30dip"
        android:text="@string/login" />

</LinearLayout>
