<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dip"
        android:layout_marginTop="40dip"
        android:gravity="center"
        android:text="@string/add_product"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dip"
        android:layout_marginStart="10dip"
        android:gravity="center"
        android:hint="@string/product_name"
        android:inputType="text"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editText_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dip"
        android:layout_marginStart="10dip"
        android:gravity="center"
        android:digits="1234567890."
        android:hint="@string/product_price"
        android:textSize="16sp" />

    <CheckBox android:id="@+id/checkBox_status" android:text="@string/product_status" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content"/>

    <Button
        android:text="Add Product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button" />

</LinearLayout>